[tool.poetry]
name = "webkitpy"
version = "0.1.0"
description = ""
authors = ["WebKit Contributors"]
license = "Modified BSD"
packages = [
    { include = "webkitpy" },
]

[tool.poetry.dependencies]
python = "^3.7"
mock = "4"
setuptools = "56"
certifi = "2020.6.20"
chardet = "3.0.4"
python-dateutil = "2.8.1"
entrypoints = "0.3"
funcsigs = "1.0.2"
idna = "2.10"
packaging = "21.3"
pyparsing = "2.4.7"
requests = "2.24"
setuptools-scm = "5.0.2"
PySocks = "1.7.1"
six = "1.15"
tblib = "1.7"
urllib3 = "1.25.10"
wheel = "0.35.1"
whichcraft = "0.6.1"
keyring = "23.2.1"
pylint = "2.6"
pytest-asyncio = "0.14"
pytest-timeout = "1.4.2"
pytest = "6.1.2"
websockets = "8.1"
importlib-metadata = "4.8.1"
atomicwrites = "1.1.5"
attrs = "18.1"
beautifulsoup4 = "4.9.3"
configparser = "4.0.2"
contextlib2 = "0.6"
coverage = "5.2.1"
Genshi = "0.7.3"
html5lib = "1.1"
iniconfig = "1.1.1"
mechanize = "0.4.5"
more-itertools = "4.2"
mozprocess = "1.3"
mozlog = "7.1"
mozterm = "1"
pluggy = "0.13.1"
py = "1.8.2"
pycodestyle = "2.5"
pyfakefs = "3.7.2"
scandir = "1.10"
soupsieve = "1.9.6"
selenium = "3.141"
toml = "0.10.1"
wcwidth = "0.2.5"
webencodings = "0.5.1"
zipp = "1.2"
"zope.interface" = "5.1"
fasteners = "0.15"
Jinja2 = "2.11.3"
monotonic = "1.5"
xmltodict = "0.11"
MarkupSafe = "1.1.1"


reporelaypy = { path = "libraries/reporelaypy", develop = false }
resultsdbpy = { path = "libraries/resultsdbpy", develop = false }
webkitbugspy = { path = "libraries/webkitbugspy", develop = false }
webkitcorepy = { path = "libraries/webkitcorepy", develop = false }
webkitflaskpy = { path = "libraries/webkitflaskpy", develop = false }
webkitscmpy = { path = "libraries/webkitscmpy", develop = false }


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
